@@ -8,6 +8,6 @@
     :license: BSD, see LICENSE for details.
 #}
 {%- if display_toc %}
-  <h3>Sections</a></h3>
+  <h3>Current section</a></h3>
   {{ toc }}
 {%- endif %}
