@@ -8,12 +8,12 @@
     :license: BSD, see LICENSE for details.
 #}
 {%- if prev %}
-  <h4>{{ _('Previous topic') }}</h4>
+  <h3>{{ _('Previous section') }}</h3>
   <p class="topless"><a href="{{ prev.link|e }}"
                         title="{{ _('previous chapter') }}">{{ prev.title }}</a></p>
 {%- endif %}
 {%- if next %}
-  <h4>{{ _('Next topic') }}</h4>
+  <h3>{{ _('Next section') }}</h3>
   <p class="topless"><a href="{{ next.link|e }}"
                         title="{{ _('next chapter') }}">{{ next.title }}</a></p>
 {%- endif %}
