@@ -1,0 +1,43 @@
+#FIG 3.2  Produced by xfig version 3.2.5b
+Landscape
+Center
+Metric
+A4      
+100.00
+Single
+-2
+1200 2
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 1350 2475 144 144 1260 2363 1440 2588
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 2475 2475 144 144 2385 2363 2565 2588
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 2025 1800 144 144 1935 1688 2115 1913
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 900 3150 144 144 810 3038 990 3263
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 2700 1125 144 144 2610 1013 2790 1238
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 3375 1800 144 144 3285 1688 3465 1913
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 2025 3150 144 144 1935 3038 2115 3263
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 3150 3150 144 144 3060 3038 3240 3263
+1 4 0 1 0 7 50 -1 -1 0.000 1 0.0000 2700 4050 144 144 2610 3938 2790 4163
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 2614 1242 2136 1710
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 1927 1908 1449 2371
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 1266 2595 972 3027
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 2817 1216 3275 1684
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 2121 1908 2390 2345
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 2385 2589 2105 3037
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 2578 2574 3046 3042
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 3072 3271 2777 3916
+4 0 0 50 -1 0 12 0.0000 6 165 315 1903 1617 $2$\001
+4 0 0 50 -1 0 12 0.0000 6 165 315 1257 2278 $3$\001
+4 0 0 50 -1 0 12 0.0000 6 165 315 814 2960 $4$\001
+4 0 0 50 -1 0 12 0.0000 6 165 315 3047 2980 $7$\001
+4 0 0 50 -1 0 12 0.0000 6 165 315 2625 3870 $8$\001
+4 0 0 50 -1 0 12 0.0000 6 165 315 3301 1612 $9$\001
+4 0 0 50 -1 0 12 0.0000 6 165 315 2416 2283 $5$\001
+4 0 0 50 -1 0 12 0.0000 6 165 315 1888 2970 $6$\001
+4 0 0 50 -1 0 12 0.0000 6 165 315 2483 992 $1$\001
